fix spacing

--- a/airbyte-webapp/src/components/connectorBuilder/Builder/BuilderSidebar.module.scss
+++ b/airbyte-webapp/src/components/connectorBuilder/Builder/BuilderSidebar.module.scss
@@ -36,7 +36,7 @@
   align-items: center;
   width: 100%;
   padding: 0;
-  margin-top: variables.$spacing-xl;
+  margin-top: variables.$spacing-2xl;
 }
 
 .streamsHeading {
